# fschema

./: .gitignore  .make.env.example  LICENSE  Makefile  README.md  pyproject.toml
src/fschema/: __init__.py  data_transformers.py  fs_interface.py  fs_loader.py  readers.py  schema.py
src/fschema/data/: __init__.py  base.py  identity.py  marshmallow.py
src/fschema/fields/: __init__.py  base.py  meta.py  node.py
src/fschema/fs/: __init__.py  interface.py  local.py
src/fschema/readers/: __init__.py  base.py  json.py  text.py  yaml.py
tests/: test_fschema.py
